tests/paczka2/big_fuzzy/35334929.err
Error in line 2: Kbjc90hu A1 ,1
Error in line 3: A31 A31 91,4
Error in line 15: rp4 A31 18,1
Error in line 19: rp4 A851 57,7
Error in line 28: Kbjc90hu S329 312,9
Error in line 43: 9UVPUfLFp S329 80,7
Error in line 49: A31 S329 37,19
Error in line 51: A31 S329 98,5
Error in line 66: 9UVPUfLFp S329 94,9
Error in line 69: 9UVPUfLFp A851 52,0
Error in line 74: ZqHvee A851 207,00
Error in line 75: rp4 S329 43,6
Error in line 90: Kbjc90hu A31 78,3
Error in line 88: rp4 A851 218,5
Error in line 102: D8Kjvy A31 10,3
Error in line 128: VrmXk S329 86,5
Error in line 135: ZqHvee S329 22,9
Error in line 141: A31 A851 578,3
Error in line 151: A31 S329 15,6
Error in line 158: 9UVPUfLFp A31 1,9
Error in line 164: 9UVPUfLFp A851 76,0
Error in line 171: VrmXk S329 16,6
Error in line 173: VrmXk S532 9,6
Error in line 183: D8Kjvy A851 88,9
Error in line 186: ZqHvee A31 11,7
Error in line 180: A31 A31 55,4
Error in line 190: VrmXk S532 52,6
Error in line 185: D8Kjvy A31 8,1
Error in line 209: D8Kjvy A81 178,
Error in line 219: rp4 A31 47,7
Error in line 221: rp4 A851 13,5
Error in line 206: ZqHvee S532 117,3
Error in line 224: rp4 S532 37,3
Error in line 232: ZqHvee A31 30,9
Error in line 207: D8Kjvy A851 55,6
